--- a/website/style.css
+++ b/website/style.css
@@ -12,6 +12,7 @@
 --blue-dr:#0C274A;
 --blue-lg:#0c1e39;
 --dark-bg:#222222;
+--crismon:#ed0c32;
 --black:#000;
 --box-shadow:0 0.5rem 1rem rgba(0,0,0,0.1);
 }
@@ -33,6 +34,18 @@ html{
   overflow-x:hidden;
   scroll-behavior: smooth;
   scroll-padding-top: 6rem;  /*busca información*/
+}
+
+html::-webkit-scrollbar{
+  width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+  background-color:var(--white);
+}
+
+html::-webkit-scrollbar-thumb{
+  background-color: var(--dark-bg);
 }
 
 body{
@@ -99,6 +112,23 @@ section{
   right: 0;
   padding: 5rem 9%;
   z-index: 100;/*Para poder mostrar en la parte frontal.*/
+}
+
+.header.active{/*codigo de active para navbar con javascript*/
+  background-color: var(--white);
+  padding: 3rem 9%;
+}
+
+.header.active .navbar a{
+  color: var(--dark-bg);
+}
+
+.header.active .navbar a:hover {
+  color: var(--crismon);
+}
+
+.header.active .menu{
+  color: var(--crismon)
 }
 
 .header .navbar{
@@ -181,4 +211,57 @@ section{
   letter-spacing: 0.1rem;
   text-transform: uppercase;
 
+}
+
+/*Resumen*/
+.resume .col-container .col .box{
+  background-color: var(--dark-gray);
+  padding: 2.5rem;
+  margin: 2rem 0;
+  box-shadow: var(--box-shadow);
+}
+
+.resume .col-container {
+  display: grid;
+  grid-template-columns:repeat(auto-fit,  minmax(30rem, 1fr));
+  gap:4rem;
+}
+
+.resume .col-container .col h2{
+  font-size: 2.6rem;
+  color: var(--cultured);
+  font-weight: 500;
+  padding-bottom: 2rem;
+}
+
+.resume .col-container .col .box span {
+  color: var(--white);
+  font-size: 1.7rem;
+  display: flex;
+  align-items:center;
+}
+
+.resume .col-container .col .box span i {
+  padding-right: 0.5rem;
+  font-size: 1.7rem;
+}
+
+.resume .col-container .col .box  h3 {
+ color: var(--crismon);
+ font-size: 2rem;
+ margin-top: 1rem;
+ font-weight: 400;
+}
+
+.resume .col-container .col .box p {
+ font-size: 1.7rem;
+ color: var(--dark-bg);
+ margin-top: 1rem;
+ line-height:1.5;
+ text-transform: none;
+}
+
+.resume .col-container .col .box .university {
+ color: var(--blue-dr);
+ text-transform: capitalize;
 }
